<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorite">Favorite</string>

    <string name="movie_title_sample">Movie Title</string>
    <string name="years_sample">Years</string>
    <string name="score_sample">10</string>
    <string name="more_details">More Details</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="scale_10">/10</string>
    <string name="scale_8_0">8.0</string>
    <string name="overview">Overview</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star_image">Star Image</string>
    <string name="blur_poster_image">Blur Poster Image</string>
    <string name="poster_image">Poster Image</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="movie_details">Movie Details</string>
    <string name="tv_show_details">TV Show Details</string>
    <string name="change_language">Change Language</string>
    <string name="votes_sample">(10000 votes)</string>
    <string name="original_language">Original Language</string>
    <string name="score">Score:</string>
    <string name="release_date">Release Date:</string>
    <string name="search_movies">Search movies</string>
    <string name="search_tv_shows">Search tv shows</string>
    <string name="search">Search</string>
    <string name="error_connection">An error occurred, please retry the operation</string>
    <string name="refresh">REFRESH</string>
    <string name="no_connection">No Connection</string>
    <string name="genre">Genre</string>
    <string name="settings">Settings</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_icon">Release Reminder Icon</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_icon">Daily Reminder Icon</string>
    <string name="change_language_icon">Change Language Icon</string>
    <string name="next_icon">Next Icon</string>
    <string name="release_reminder_details">Reminder showing the movie that released today</string>
    <string name="daily_reminder_details">Reminder for return to app</string>
    <string name="no_data">NO DATA</string>
    <string name="stack_image">Stack Image</string>
    <string name="release_reminder_pref">release_reminder</string>
    <string name="daily_reminder_pref">daily_reminder</string>
    <string name="locale_pref">locale</string>
    <string name="message_daily">Let\'s use Movie Catalogue again!</string>
    <string name="message_release">has been released today!</string>
</resources>
