<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:weightSum="100">

    <LinearLayout
        android:id="@+id/ll_stack_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_weight="5"
        android:padding="10dp"
        android:gravity="end">

        <ImageView
            android:id="@+id/iv_star_rating"
            android:layout_gravity="center"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/star_rating"
            android:contentDescription="@string/star_image"/>

        <TextView
            android:id="@+id/tv_stack_movie_score"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:text="@string/scale_8_0"
            android:textColor="@color/yellow"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_stack_movie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:adjustViewBounds="true"
        android:contentDescription="@string/stack_image"
        android:scaleType="fitCenter" />
</LinearLayout>