<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/movies_list_item" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_no_connection"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/no_connection"
            android:src="@drawable/no_connection" />

        <TextView
            android:id="@+id/tv_no_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_connection"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:text="@string/refresh"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>