<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Toolbar
        android:id="@+id/tb_change_language_details"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorTab"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/white"
        android:title="@string/change_language"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="m">

    </Toolbar>

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tb_change_language_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_english"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/selector_radio_button"
            android:button="@android:color/transparent"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/english"
            android:textAlignment="center"
            android:textColor="@color/yellow" />

        <RadioButton
            android:id="@+id/rb_indonesian"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/selector_radio_button"
            android:button="@android:color/transparent"
            android:checked="false"
            android:padding="10dp"
            android:text="@string/indonesian"
            android:textAlignment="center"
            android:textColor="@color/white"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>